<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".AddOrEditeOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceName" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceType" />

                <TextView
                    style="@style/CategoryStyle"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceModel" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceDetails" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceIp" />

                <TextView
                    style="@style/CategoryStyle"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivcePort" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceUsername" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivcePassword" />

                <TextView
                    style="@style/CategoryStyle"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceEmail" />

                <TextView
                    style="@style/CategoryStyle"

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/deivceEmailPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/deivceName"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivceType"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceType"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivceModel"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceModel"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/deivceDetails"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceDetails"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivceIp"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceIp"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivcePort"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivcePort"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/deivceUsername"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceUsername"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivcePassword"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivcePassword"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deivceEmail"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceEmail"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/deivceEmailPassword"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/deivceEmailPassword"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>