<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/activity_margin"
    tools:context=".AddOrEditeOrderActivity">
<<<<<<< HEAD
=======

>>>>>>> 4d8adbf7f1e4ccbed605560ec2c90d1b8bdba1f1
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_place" />


                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/addorder_place"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/addOrder_place"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/addorder_location"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/addOrder_location"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/addorder_user" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usersname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/bt" />

                <Button
                    android:id="@+id/bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="setUsersList"
                    android:text="@string/choose" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/addOrder_fix"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:layout_height="match_parent"
                    android:id="@+id/addorder_fix"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/addOrder_fix"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_dliverCost" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/addorder_dliverCost"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/addOrder_dliverCost"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_date" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/addorder_date"
                        style="@style/EditorFieldStyle"
                        android:layout_marginRight="50dp"
                        android:hint="@string/addOrder_date"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/addorder_date_add"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_baseline_date_range_36" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/addorder_time"
                        style="@style/EditorFieldStyle"
                        android:layout_marginRight="50dp"
                        android:hint="@string/addOrder_time"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/addorder_time_add"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_baseline_access_time_24" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/Num_of_matter" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_file" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/addorder_matter"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/Num_of_matter"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/addorder_files"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/addOrder_file"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_Notes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/addorder_notes"
                    style="@style/EditorFieldStyle"
                    android:layout_height="match_parent"
                    android:hint="@string/addOrder_Notes"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/addOrder_progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/addorder_progItem"
                        style="@style/EditorFieldStyle"
                        android:layout_marginRight="80dp"
                        android:hint="@string/addOrder_item"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/addorder_time_add_prog"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/ic_add" />

                    <ImageView
                        android:id="@+id/addorder_time_remove_prog"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_toLeftOf="@id/addorder_time_add_prog"
                        android:background="@drawable/ic_baseline_close_24" />
                </RelativeLayout>

                <ListView
                    android:id="@+id/listOfProgress"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
