<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/costsListText"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/cost_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/costsListTextAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp">

            <ImageView
                android:id="@+id/date_from_add"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_baseline_date_range_24" />

            <EditText
                android:id="@+id/date_from"
                style="@style/EditorFieldStyle"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center_horizontal"
                android:hint="@string/date_from"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp">

            <ImageView
                android:id="@+id/date_to_add"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_baseline_date_range_24" />

            <EditText
                android:id="@+id/date_to"
                style="@style/EditorFieldStyle"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:gravity="center_horizontal"
                android:hint="@string/date_to"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/content_save_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/show"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/costList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/costsListTextAdd"
        android:divider="@android:color/transparent"
        android:dividerHeight="10sp"
        tools:listitem="@layout/orders_activity_list_content_costs" />

</LinearLayout>
